--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+/* นำเข้าฟอนต์ Noto Sans Thai จาก Google Fonts */
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
